--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     text-align: center;
     
 }
-h1{
+#Main-title{
     font-size: 50px;
     color: white;
     
@@ -26,8 +26,48 @@ h1{
     background-color: rgb(255, 87, 115);
     margin-left: 35%;
     margin-right: 35%;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    margin-bottom: 100px;
+    margin-top: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     color: white;
+    font-size: 20px;
     }
+    .link-button{
+        text-decoration: none;
+        background-color: rgb(255, 87, 115);
+        padding:10px;
+        color: white;
+        font-weight: 700;
+        
+    }
+    .lower-box{
+        font-size: 40px;
+        color: rgb(255, 87, 115);
+    }
+    section{
+        display: flex;
+        padding-left: 10px;
+        padding-bottom: 10px;
+        
+    }
+    .box-shadaw{
+        box-shadow: 10px 20px 50px 10px rgb(187, 187, 187);
+        margin-left: 15px;
+        margin-right: 5px;
+        padding-left:30px;
+        padding-right: 20px;
+        padding-bottom: 100px;
+        border-left: 10px solid;
+        border-image: linear-gradient(rgb(255, 0, 98), pink) ;
+        border-image-slice: 1;
+        border-radius: 10px;
+        
+    }
+    
+
+       
+        
+   
+    
 
